--- a/src/ConsoleApp/packages.config
+++ b/src/ConsoleApp/packages.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="System.DirectoryServices" version="6.0.0" targetFramework="net48" />
-  <package id="System.DirectoryServices.AccountManagement" version="6.0.0" targetFramework="net48" />
-  <package id="System.IO.FileSystem.AccessControl" version="5.0.0" targetFramework="net48" />
-  <package id="System.Security.AccessControl" version="6.0.0" targetFramework="net48" />
-  <package id="System.Security.Permissions" version="6.0.0" targetFramework="net48" />
-  <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net48" />
+  <package id="System.DirectoryServices" version="6.0.2-mauipre.1.22054.8" targetFramework="net48" />
+  <package id="System.DirectoryServices.AccountManagement" version="6.0.2-mauipre.1.22054.8" targetFramework="net48" />
+  <package id="System.IO.FileSystem.AccessControl" version="6.0.0-preview.5.21301.5" targetFramework="net48" />
+  <package id="System.Security.AccessControl" version="6.0.2-mauipre.1.22054.8" targetFramework="net48" />
+  <package id="System.Security.Permissions" version="6.0.2-mauipre.1.22054.8" targetFramework="net48" />
+  <package id="System.Security.Principal.Windows" version="6.0.0-preview.5.21301.5" targetFramework="net48" />
 </packages>
